@@ -5,6 +5,7 @@ Document trade offs of replication.
 Increase HDFS bandwidthPerSec.
 Fix hadoop-hdfs-over-lustre-nodes-decomission-script.sh path bug.
 Fix hadoop-create-files-script.sh to work w/ Hadoop 1.0 & 2.0.
+Add convenience script hadoop-remove-all-files-script.sh.
 
 magpie 1.3
 ----------
